--- a/guide/tutorial/10-step-09-co_ocurrence.ipynb
+++ b/guide/tutorial/10-step-09-co_ocurrence.ipynb
@@ -119,10 +119,10 @@
    ],
    "source": [
     "rdf.term_by_term(\n",
-    "    termA='keywords (cleaned)', \n",
-    "    termB='Year', \n",
-    "    sepA=';', \n",
-    "    sepB=None).head()"
+    "    column_r='keywords (cleaned)', \n",
+    "    column_c='Year', \n",
+    "    sep_r=';', \n",
+    "    sep_c=None).head()"
    ]
   },
   {
@@ -207,10 +207,10 @@
    ],
    "source": [
     "rdf.term_by_term( \n",
-    "    termA='keywords (cleaned)', \n",
-    "    termB='Year', \n",
-    "    sepA=';', \n",
-    "    sepB=None, \n",
+    "    column_r='keywords (cleaned)', \n",
+    "    column_c='Year', \n",
+    "    sep_r=';', \n",
+    "    sep_c=None, \n",
     "    minmax=(2,3)).head()   ## minimum and maximum values in the matrix"
    ]
   },
@@ -234,16 +234,16 @@
    ],
    "source": [
     "rdf.term_by_term( \n",
-    "    termA='keywords (cleaned)', \n",
-    "    termB='Year', \n",
-    "    sepA=';', \n",
-    "    sepB=None, \n",
+    "    column_r='keywords (cleaned)', \n",
+    "    column_c='Year', \n",
+    "    sep_r=';', \n",
+    "    sep_c=None, \n",
     "    minmax=(5,8)).heatmap(ascendingA=True, ascendingB=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -673,23 +673,23 @@
        "https://altair-viz.github.io/user_guide/troubleshooting.html\n"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rdf.term_by_term( \n",
-    "    termA='keywords (cleaned)', \n",
-    "    termB='Year', \n",
-    "    sepA=';', \n",
-    "    sepB=None, \n",
-    "    minmax=(5,8)).heatmap_in_altair(ascendingA=True, ascendingB=False)"
+    "    column_r='keywords (cleaned)', \n",
+    "    column_c='Year', \n",
+    "    sep_r=';', \n",
+    "    sep_c=None, \n",
+    "    minmax=(5,8)).heatmap(ascendingA=True, ascendingB=False, library='altair')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1126,23 +1126,23 @@
        "https://altair-viz.github.io/user_guide/troubleshooting.html\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rdf.term_by_term( \n",
-    "    termA='keywords (cleaned)', \n",
-    "    termB='Year', \n",
-    "    sepA=';', \n",
-    "    sepB=None, \n",
-    "    minmax=(5,8)).circleplot_in_altair(ascendingA=True, ascendingB=False)"
+    "    column_r='keywords (cleaned)', \n",
+    "    column_c='Year', \n",
+    "    sep_r=';', \n",
+    "    sep_c=None, \n",
+    "    minmax=(5,8)).circlerel(ascendingA=True, ascendingB=False, library='altair')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1871,185 +1871,47 @@
        "trading                        8.0   7.0   0.0   7.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rdf.term_by_term( \n",
-    "    termA='keywords (cleaned)', \n",
-    "    termB='Year', \n",
-    "    sepA=';', \n",
-    "    sepB=None, \n",
+    "    column_r='keywords (cleaned)', \n",
+    "    column_c='Year', \n",
+    "    sep_r=';', \n",
+    "    sep_c=None, \n",
     "    minmax=(5,8)).tomatrix()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "centers, clusters = rdf.term_by_term( \n",
-    "    termA='Authors', \n",
-    "    termB='keywords (cleaned)', \n",
-    "    sepA=',', \n",
-    "    sepB=';').kmeans(n_clusters = 3)"
+    "    column_r='Authors', \n",
+    "    column_c='keywords (cleaned)', \n",
+    "    sep_r=',', \n",
+    "    sep_c';').kmeans(n_clusters = 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Cluster 0</th>\n",
-       "      <th>Cluster 1</th>\n",
-       "      <th>Cluster 2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Algorithmic trading system</th>\n",
-       "      <td>4.166667e-02</td>\n",
-       "      <td>0.022113</td>\n",
-       "      <td>6.930693e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Architecture paradigms</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.002457</td>\n",
-       "      <td>-9.107298e-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Holonic systems</th>\n",
-       "      <td>6.938894e-18</td>\n",
-       "      <td>0.007371</td>\n",
-       "      <td>-1.734723e-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Multi agent systems</th>\n",
-       "      <td>1.875000e-01</td>\n",
-       "      <td>0.040541</td>\n",
-       "      <td>1.980198e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Multi-strategy trading</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.002457</td>\n",
-       "      <td>-9.107298e-18</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               Cluster 0  Cluster 1     Cluster 2\n",
-       "Algorithmic trading system  4.166667e-02   0.022113  6.930693e-02\n",
-       "Architecture paradigms      0.000000e+00   0.002457 -9.107298e-18\n",
-       "Holonic systems             6.938894e-18   0.007371 -1.734723e-18\n",
-       "Multi agent systems         1.875000e-01   0.040541  1.980198e-02\n",
-       "Multi-strategy trading      0.000000e+00   0.002457 -9.107298e-18"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "centers.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cluster</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Takenaka T.</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sandoval J.</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Dixon M.</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Breitner M.H.</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Vaitonis M.</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               cluster\n",
-       "Takenaka T.          0\n",
-       "Sandoval J.          0\n",
-       "Dixon M.             0\n",
-       "Breitner M.H.        0\n",
-       "Vaitonis M.          0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clusters.sort_values('cluster').head()"
    ]
@@ -2063,90 +1925,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Document Type</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Num Documents</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Article</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Article</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Article</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Article</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Article</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Document Type  Year  Num Documents\n",
-       "0       Article  1994              1\n",
-       "1       Article  2000              2\n",
-       "2       Article  2003              1\n",
-       "3       Article  2004              2\n",
-       "4       Article  2006              1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rdf.term_by_term(\n",
-    "    termA='Document Type', \n",
-    "    termB='Year', \n",
-    "    sepA=None, \n",
-    "    sepB=None).head()"
+    "    column_r='Document Type', \n",
+    "    column_c='Year', \n",
+    "    sep_r=None, \n",
+    "    sep_c=None).head()"
    ]
   },
   {
@@ -2158,90 +1945,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>keywords (cleaned)</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Num Documents</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>(location-based) publish/subscribe</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10-fold cross-validation</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>?-stable processes</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ABM</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ADALINE</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   keywords (cleaned)  Year  Num Documents\n",
-       "0  (location-based) publish/subscribe  2012              1\n",
-       "1            10-fold cross-validation  2015              1\n",
-       "2                  ?-stable processes  2018              1\n",
-       "3                                 ABM  2014              1\n",
-       "4                             ADALINE  2015              1"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rdf.term_by_term(\n",
-    "    termA='keywords (cleaned)', \n",
-    "    termB='Year', \n",
-    "    sepA=';', \n",
-    "    sepB=None).head()"
+    "    column_r='keywords (cleaned)', \n",
+    "    column_c='Year', \n",
+    "    sep_r=';', \n",
+    "    sep_c=None).head()"
    ]
   },
   {
@@ -2253,127 +1965,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Conference Paper</th>\n",
-       "      <th>Book</th>\n",
-       "      <th>Article</th>\n",
-       "      <th>Book Chapter</th>\n",
-       "      <th>Short Survey</th>\n",
-       "      <th>Review</th>\n",
-       "      <th>Article in Press</th>\n",
-       "      <th>Note</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Abdunabi T.</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abergel F.</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abghour N.</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abrol S.</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Acharya A.</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Conference Paper  Book  Article  Book Chapter  Short Survey  \\\n",
-       "Abdunabi T.               3.0   0.0      0.0           0.0           0.0   \n",
-       "Abergel F.                0.0   1.0      0.0           0.0           0.0   \n",
-       "Abghour N.                1.0   0.0      0.0           0.0           0.0   \n",
-       "Abrol S.                  0.0   0.0      1.0           0.0           0.0   \n",
-       "Acharya A.                1.0   0.0      0.0           0.0           0.0   \n",
-       "\n",
-       "             Review  Article in Press  Note  \n",
-       "Abdunabi T.     0.0               0.0   0.0  \n",
-       "Abergel F.      0.0               0.0   0.0  \n",
-       "Abghour N.      0.0               0.0   0.0  \n",
-       "Abrol S.        0.0               0.0   0.0  \n",
-       "Acharya A.      0.0               0.0   0.0  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rdf.term_by_term(\n",
-    "    termA='Authors', \n",
-    "    termB='Document Type', \n",
-    "    sepA=',', \n",
-    "    sepB=None).tomatrix().head()"
+    "    column_r='Authors', \n",
+    "    column_c='Document Type', \n",
+    "    sep_r=',', \n",
+    "    sep_c=None).tomatrix().head()"
    ]
   }
  ],
