--- a/guide/tutorial/10-step-09-co_ocurrence.ipynb
+++ b/guide/tutorial/10-step-09-co_ocurrence.ipynb
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1895,23 +1895,161 @@
     "    column_r='Authors', \n",
     "    column_c='keywords (cleaned)', \n",
     "    sep_r=',', \n",
-    "    sep_c';').kmeans(n_clusters = 3)"
+    "    sep_c=';').kmeans(n_clusters = 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cluster 0</th>\n",
+       "      <th>Cluster 1</th>\n",
+       "      <th>Cluster 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Algorithmic trading system</th>\n",
+       "      <td>5.357143e-02</td>\n",
+       "      <td>0.021795</td>\n",
+       "      <td>8.333333e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Architecture paradigms</th>\n",
+       "      <td>-9.757820e-18</td>\n",
+       "      <td>0.002564</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holonic systems</th>\n",
+       "      <td>-1.127570e-17</td>\n",
+       "      <td>0.007692</td>\n",
+       "      <td>8.673617e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Multi agent systems</th>\n",
+       "      <td>8.928571e-03</td>\n",
+       "      <td>0.037179</td>\n",
+       "      <td>2.500000e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Multi-strategy trading</th>\n",
+       "      <td>-9.757820e-18</td>\n",
+       "      <td>0.002564</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Cluster 0  Cluster 1     Cluster 2\n",
+       "Algorithmic trading system  5.357143e-02   0.021795  8.333333e-02\n",
+       "Architecture paradigms     -9.757820e-18   0.002564  0.000000e+00\n",
+       "Holonic systems            -1.127570e-17   0.007692  8.673617e-18\n",
+       "Multi agent systems         8.928571e-03   0.037179  2.500000e-01\n",
+       "Multi-strategy trading     -9.757820e-18   0.002564  0.000000e+00"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "centers.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Krause S.M.</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kumar P.N.</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ganchev K.</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tsang E.P.K.</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gan L.</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              cluster\n",
+       "Krause S.M.         0\n",
+       "Kumar P.N.          0\n",
+       "Ganchev K.          0\n",
+       "Tsang E.P.K.        0\n",
+       "Gan L.              0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clusters.sort_values('cluster').head()"
    ]
@@ -1925,9 +2063,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Document Type</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Num Documents</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Article</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Article</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Article</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Article</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Article</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Document Type  Year  Num Documents\n",
+       "0       Article  1994              1\n",
+       "1       Article  2000              2\n",
+       "2       Article  2003              1\n",
+       "3       Article  2004              2\n",
+       "4       Article  2006              1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rdf.term_by_term(\n",
     "    column_r='Document Type', \n",
@@ -1945,9 +2158,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>keywords (cleaned)</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Num Documents</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(location-based) publish/subscribe</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10-fold cross-validation</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>?-stable processes</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABM</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ADALINE</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   keywords (cleaned)  Year  Num Documents\n",
+       "0  (location-based) publish/subscribe  2012              1\n",
+       "1            10-fold cross-validation  2015              1\n",
+       "2                  ?-stable processes  2018              1\n",
+       "3                                 ABM  2014              1\n",
+       "4                             ADALINE  2015              1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rdf.term_by_term(\n",
     "    column_r='keywords (cleaned)', \n",
@@ -1965,9 +2253,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Conference Paper</th>\n",
+       "      <th>Book</th>\n",
+       "      <th>Article</th>\n",
+       "      <th>Book Chapter</th>\n",
+       "      <th>Short Survey</th>\n",
+       "      <th>Review</th>\n",
+       "      <th>Article in Press</th>\n",
+       "      <th>Note</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Abdunabi T.</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Abergel F.</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Abghour N.</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Abrol S.</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Acharya A.</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Conference Paper  Book  Article  Book Chapter  Short Survey  \\\n",
+       "Abdunabi T.               3.0   0.0      0.0           0.0           0.0   \n",
+       "Abergel F.                0.0   1.0      0.0           0.0           0.0   \n",
+       "Abghour N.                1.0   0.0      0.0           0.0           0.0   \n",
+       "Abrol S.                  0.0   0.0      1.0           0.0           0.0   \n",
+       "Acharya A.                1.0   0.0      0.0           0.0           0.0   \n",
+       "\n",
+       "             Review  Article in Press  Note  \n",
+       "Abdunabi T.     0.0               0.0   0.0  \n",
+       "Abergel F.      0.0               0.0   0.0  \n",
+       "Abghour N.      0.0               0.0   0.0  \n",
+       "Abrol S.        0.0               0.0   0.0  \n",
+       "Acharya A.      0.0               0.0   0.0  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rdf.term_by_term(\n",
     "    column_r='Authors', \n",
